--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "stinkylinks",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "3.4"
+    "@rails/webpacker": "3.4",
+    "rails-ujs": "^5.2.0",
+    "resolve-url-loader": "^2.3.0",
+    "turbolinks": "^5.1.1"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
